<resources>
    <string name="app_name">大眼360</string>
    <string name="splash_title">欢迎体验农家360</string>
    <string name="splash_copyright">Copyright © 2021 ChinaFocus. All rights reserved.</string>

    <string name="login_des">登录</string>
    <string name="login_confirm">再次确认账号</string>
    <string name="login_account">请输入账号</string>
    <string name="login_title">请登录账号</string>
    <string name="login_account_not_null">账号不能为空</string>
    <string name="login_account_must_equals">两次输入账号必须一样</string>
    <string name="main_navigation_publish">全景出版</string>
    <string name="main_navigation_video">全景视频</string>
    <string name="main_navigation_about">关于</string>
    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="setting_title">产品配置</string>
    <string name="setting_all_done">完成，进入主页</string>

    <string name="setting_status_wifi_main_title">*WLAN设置</string>
    <string name="setting_status_wifi_connecting">正在连接…</string>
    <string name="setting_status_wifi_connect_error">连接失败，点击重新连接</string>
    <string name="setting_status_wifi_check_again">⚠️已连接但无网络，请检查</string>
    <string name="setting_status_wifi_success">已连接至：</string>

    <string name="setting_status_bluetooth_main_title">*配对 VR 眼镜</string>
    <string name="setting_status_bluetooth_sub_title">正在自动配对…</string>
    <string name="setting_status_bluetooth_sub_body">请确保 VR 眼镜已开机</string>
    <string name="setting_status_bluetooth_retry">点击重试</string>
    <string name="setting_status_bluetooth_success">已配对：</string>
    <string name="setting_status_bluetooth_error">配对失败，请检查设置</string>

    <string name="setting_status_alias_main_title">设备名称</string>
    <string name="setting_status_alias_result">去设置</string>
    <string name="setting_status_alias_empty"></string>
    <string name="setting_status_alias_title">设置设备名称</string>
    <string name="setting_status_cancel">取消</string>
    <string name="setting_status_ok">确定</string>
    <string name="about_user_protocol">用户协议</string>
    <string name="about_privacy_protocol">隐私协议</string>
    <string name="about_us_protocol">关于我们</string>
    <string name="video_play">播放</string>

    <string name="media_video_intro">简介</string>
    <string name="media_video_adjust">回正</string>
    <string name="media_video_vr">VR</string>
    <string name="media_video_intro_big">简介</string>
    <string name="media_video_setting">设置</string>
    <string name="media_video_vr_sync">正在同步展示 VR 眼镜中的视频，已禁用返回及拖动进度功能</string>
    <string name="media_video_vr_link_des">戴上 VR 眼镜，立即开始同步观看</string>
    <string name="vr_mode_linking">正在等待 VR 眼镜播放视频</string>
    <string name="mine_about">关于</string>
    <string name="mine_about_copyright_intro">中图云创 版权所有\nCopyright © 2021 ChinaFocus. All rights reserved.</string>
    <string name="bluetooth_status_lost">蓝牙断开，已进入脱机模式\n如想恢复连接，请联系工作人员</string>
    <string name="bluetooth_status_connected">蓝牙恢复\n已重新和VR建立连接</string>
    <string name="bluetooth_status_know">我知道了</string>
    <string name="setting_device_info">设备信息</string>
    <string name="setting_device_uuid">设备ID</string>
    <string name="setting_device_account_id">客户ID</string>
    <string name="setting_device_version_code">版本号</string>

    <string name="check_version_title">发现新版本！</string>
    <string name="check_version_cancel">以后再说</string>
    <string name="check_version_confirm">立即更新</string>
    <string name="check_version_retry">重新下载</string>
    <string name="check_version_install_immediately">立即安装</string>
    <string name="check_version_download_complete">下载已完成</string>
    <string name="check_version_pause">暂停</string>
    <string name="check_version_resume">恢复</string>
    <string name="check_version_download_des">正在下载升级包，请勿关闭设备…</string>
    <string name="check_version_download_error">下载失败\n请检查您的网络后再试</string>

    <string name="check_version_latest">已经是最新版</string>
    <string name="check_network_error">网络错误，请检查网络设置</string>
    <string name="app_download_running">新版本正在后台更新中</string>

    <string name="video_update_button">视频缓存</string>
    <string name="video_update_text_open">开启后，新增、变更的视频将下载并存\n储于本地，确认开启？</string>
    <string name="video_update_text_close">关闭后，新增、变更的视频将通过网络\n播放，确认关闭？</string>
    <string name="video_update_button_close">确定关闭</string>
    <string name="video_update_button_open">确定开启</string>
    <string name="video_update_init_text">有最新列表，点击更新</string>
    <string name="video_update_running_text">正在更新</string>
    <string name="video_update_error_text">更新失败，重试</string>
    <string name="video_update_download_error_text">获取列表失败，重试</string>
    <string name="video_update_Latest_text">列表已是最新</string>
    <string name="video_update_text">视频资源更新</string>
    <string name="video_update_get_text">获取最新列表</string>
    <string name="video_update_get_text2">离线下载</string>
    <string name="video_update_close_text">离线下载功能处于关闭状态\n视频将使用流量播放</string>
    <string name="video_update_get_text3">未缓存至本地的视频将使用流量播放</string>
    <string name="video_update_get_text4">当前网络不可用，点击重试</string>
    <string name="video_update_get_text5">当前已是最新</string>
    <string name="video_update_get_text6">当前视频资源更新，请前往离线下载页\n面下载最新视频</string>
    <string name="video_update_get_text7">将在以下时间段开启离线下载服务</string>

    <string name="video_play_count_text">数据统计</string>
    <string name="video_play_count_text2">内容播放次数</string>
    <string name="video_play_count_text3">清空</string>
    <string name="video_play_count_text4">是否要清空统计记录？\n(确认清空后，数据不可找回，请慎重操作!)</string>
    <string name="video_play_count_text5">确认清空</string>

    <string name="video_list_no_data">暂无数据</string>
    <string name="video_update_time_text">时间设置</string>
    <string name="video_update_time_text2">至</string>

    <string name="media_setting_name">设置</string>
    <string name="media_setting_volume">音量</string>
    <string name="media_setting_brightness">亮度</string>

</resources>