<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:src="@drawable/sky_worth_login_logo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_title"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/color_333"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_account_first"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/shape_login_channel_bg"
        android:hint="@string/login_account"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_title"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_account_confirm"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login_channel_bg"
        android:hint="@string/login_confirm"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_account_first"
        app:layout_constraintStart_toStartOf="@+id/et_account_first"
        app:layout_constraintTop_toBottomOf="@+id/et_account_first" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login_button_bg"
        android:text="@string/login_des"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_account_confirm"
        app:layout_constraintStart_toStartOf="@+id/et_account_confirm"
        app:layout_constraintTop_toBottomOf="@+id/et_account_confirm" />


</androidx.constraintlayout.widget.ConstraintLayout>