<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rtr.playcount.VideoPlayCountActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_video_update_back"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="27dp"
        android:padding="10dp"
        android:src="@drawable/sky_worth_setting_about_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:includeFontPadding="false"
        android:text="@string/video_play_count_text"
        android:textColor="@color/color_setting_id"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_video_update_back"
        app:layout_constraintStart_toEndOf="@id/iv_video_update_back"
        app:layout_constraintTop_toTopOf="@id/iv_video_update_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/video_play_count_text2"
        android:textColor="@color/color_setting_id"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/appCompatTextView10"
        app:layout_constraintTop_toBottomOf="@id/appCompatTextView10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_video_play_count_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:textColor="@color/color_setting_id"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/appCompatTextView16"
        app:layout_constraintStart_toEndOf="@id/appCompatTextView16"
        app:layout_constraintTop_toTopOf="@id/appCompatTextView16"
        tools:text="1515次" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_video_play_count_clear"
        android:layout_width="56dp"
        android:layout_height="32dp"
        android:layout_marginEnd="84dp"
        android:background="@drawable/shape_video_update_cancel_bg"
        android:gravity="center"
        android:text="@string/video_play_count_text3"
        android:visibility="invisible"
        android:textColor="@color/color_setting_id_create"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/appCompatTextView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/appCompatTextView16" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_video_play_count_clear_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/bt_video_play_count_clear"
        app:layout_constraintTop_toBottomOf="@id/bt_video_play_count_clear"
        tools:text="(上次清空时间：2021.06.30 20:22:00)" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_video_update_time_task_text"
        app:layout_constraintEnd_toEndOf="@id/tv_video_play_count_clear_time"
        app:layout_constraintStart_toStartOf="@id/appCompatTextView16"
        app:layout_constraintTop_toBottomOf="@id/tv_video_play_count_clear_time" />

</androidx.constraintlayout.widget.ConstraintLayout>